--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "node dist/index.js --watch",
+    "dev": "nodemon dist/index.js",
     "build:dev": "tsc -w"
   },
   "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "6.7.2",
+    "dotenv": "^16.4.5",
     "eslint": "8.50.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-config-standard-with-typescript": "39.1.0",
@@ -23,6 +24,10 @@
     "typescript": "*"
   },
   "dependencies": {
-    "discord.js": "^14.14.1"
+    "@discordx/importer": "^1.3.0",
+    "discord.js": "^14.14.1",
+    "discordx": "^11.9.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
