--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "typescript": "*"
   },
   "dependencies": {
+    "@discordjs/rest": "^2.2.0",
+    "@discordjs/voice": "^0.16.1",
     "@discordx/importer": "^1.3.0",
     "discord.js": "^14.14.1",
     "discordx": "^11.9.2",
+    "libsodium-wrappers": "^0.7.13",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   }
